terraform/security.tf
###################################
# SECURITY GROUP
###################################

resource "aws_security_group" "ec2_sg" {

  name = "sre-devops-sg"

  description = "Security Group for EC2 Docker Host"

  vpc_id = aws_vpc.main.id

  ingress {

    description = "SSH"

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    description = "HTTP"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    description = "Backend API"

    from_port = 8000

    to_port = 8000

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "sre-devops-sg"

  }

}
